--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	
 	<title>S_URL</title>
 	<meta name="description" content="Shorten URLS in no time.">
-	<meta name="author" content="author here">
+	<meta name="author" content="Elias Arno Eskelinen aka Jonnelafin">
 
 	<link rel="stylesheet" href="css/style.css">
 	
@@ -18,7 +18,7 @@
 		<div class="title">
 			<h1 id="title">S_URL</h1>
 		</div>
-		<input class="link" id="url"></input>
+		<input class="link" id="url" autofocus></input>
 		<button class="btn" onclick="onBtnPress()" id="btn">shorten</button>
 	</div>
 </body>
