the h1 now links to the base url

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 	<div class="container" id="cont">
 		<div class="title">
-			<h1 id="title">S_URL</h1>
+			<h1 id="title"><a href="https://jonnelafin.github.io/S_URL/" id="homelink">S_URL</a></h1>
 		</div>
 		<input class="link" id="url" autofocus></input>
 		<button class="btn" onclick="onBtnPress()" id="btn">shorten</button>
