--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	
 	
 	<title>S_URL</title>
-	<meta name="description" content="Shorten URLS in no time.">
+	<meta name="description" content="Mask URLS in no time.">
 	<meta name="author" content="Elias Arno Eskelinen aka Jonnelafin">
 
 	<link rel="stylesheet" href="css/style.css">
@@ -18,8 +18,12 @@
 		<div class="title">
 			<h1 id="title"><a href="https://jonnelafin.github.io/S_URL/" id="homelink">S_URL</a></h1>
 		</div>
-		<input class="link" id="url" autofocus></input>
-		<button class="btn" onclick="onBtnPress()" id="btn">shorten</button>
+		<input class="link" id="url" placeholder="https://jonnelafin.github.io/S_URL/" autofocus></input>
+<!--		<div class="check" id="options">
+			<label>use wordlist</label>
+			<input  type="checkbox" id="useWords"></input>
+		</div>-->
+		<button class="btn" onclick="onBtnPress()" id="btn">mask</button>
 	</div>
 </body>
 
