--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
 		</div>-->
 		<button class="btn" onclick="onBtnPress()" id="btn">mask</button>
 	</div>
+	<script async defer src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
+	<noscript><img src="https://queue.simpleanalyticscdn.com/noscript.gif" alt="" referrerpolicy="no-referrer-when-downgrade" /></noscript>
 </body>
 
 <footer>
